5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1836_1277.log
== TEST (2019-06-27 11:14:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

lin = int(input(" "))
colun = int(input(""))

ll = lin/lin - 1
cc = colun/colun -1
quadro = array([[0,2,11,6,15,11,1], [2,,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

for i in range(quadro):
	print(quadro[ll, cc])	
		
-- ERROR:
File "XXXX", line 9
    quadro = array([[0,2,11,6,15,11,1], [2,,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:15:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

lin = int(input(" "))
colun = int(input(""))


quadro = array([[0,2,11,6,15,11,1], [2,,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

for i in range(quadro):
	for j in range(quadro)
	print(quadro[i,j])	
		
-- ERROR:
File "XXXX", line 8
    quadro = array([[0,2,11,6,15,11,1], [2,,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:51:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = int(input(""))
b = int(input(""))


c = array([[0,2,11,6,15,11,1],
					 [2,,7,12,4,2,15],
					 [11,7,0,11,8,3,13],
					 [6,12,11,,10,2,1],
					 [15,4,8,10,0,5,13],
					 [11,2,3,2,5,0,14],
					 [1,15,13,1,13,14,0]
				])
d = array([111,222,333,444,555,666,777])
for s in range(7):
	if a==d[s]:
		i=s
for s in range(7):
	if b==d[s]:
		j=s
print(c[i,j])
			
		
-- EXECUTION TIME:
0.577527
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 9
    [2,,7,12,4,2,15],
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:52:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = int(input(""))
b = int(input(""))


c = array([[0,2,11,6,15,11,1],
					 [2,,7,12,4,2,15],
					 [11,7,0,11,8,3,13],
					 [6,12,11,,10,2,1],
					 [15,4,8,10,0,5,13],
					 [11,2,3,2,5,0,14],
					 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for s in range(7):
	if a==d[s]:
		i=s
for s in range(7):
	if b==d[s]:
		j=s
print(c[i,j])
			
		
-- EXECUTION TIME:
0.510579
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 9
    [2,,7,12,4,2,15],
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:52:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = int(input(""))
b = int(input(""))


c = array([[0,2,11,6,15,11,1],
					 [2,,7,12,4,2,15],
					 [11,7,0,11,8,3,13],
					 [6,12,11,,10,2,1],
					 [15,4,8,10,0,5,13],
					 [11,2,3,2,5,0,14],
					 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for s in range(7):
	if a==d[s]:
		i=s
for s in range(7):
	if b==d[s]:
		j=s
print(c[i,j])
			
		
-- EXECUTION TIME:
1.9301
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 9
    [2,,7,12,4,2,15],
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:52:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = int(input(""))
b = int(input(""))


c = array([[0,2,11,6,15,11,1],
					 [2,,7,12,4,2,15],
					 [11,7,0,11,8,3,13],
					 [6,12,11,,10,2,1],
					 [15,4,8,10,0,5,13],
					 [11,2,3,2,5,0,14],
					 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for s in range(7):
	if a==d[s]:
		i=s
for s in range(7):
	if b==d[s]:
		j=s
print(c[i,j])
			
		
-- EXECUTION TIME:
2.61849
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 9
    [2,,7,12,4,2,15],
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:23:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

a = int(input(""))
b = int(input(""))


c = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
					 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for s in range(7):
	if a==d[s]:
		i=s
for s in range(7):
	if b==d[s]:
		j=s
print(c[i,j])
			
		
-- EXECUTION TIME:
0.916339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 22, in <module>
    print(c[i,j])
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:27:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.09625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.1849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
4.5869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
6.77362
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
7.59592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
8.33531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
9.27542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
4.98455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:27:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
0.946576
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:28:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
0.641592
-- ERROR:
  File "/home/codebench/codes/1836/1277/main.py", line 11
    [6,12,11,0,,10,2,1],
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:28:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.14419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:29:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.86997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:29:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
2.57041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:29:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.87394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:29:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
5.44894
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:29:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
9.00405
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:29:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 0
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
8.89017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:32:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 111
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.12503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:32:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 0
b = 0
aux = 111
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
0.909842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:33:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 1
b = 0
aux = 111
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.06558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:33:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 1
b = 0
aux = 111
vet = zeros(7, dype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.16286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1277/main.py", line 19, in <module>
    vet = zeros(7, dype=int)
TypeError: 'dype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:33:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

n = int(input(""))
n1 = int(input(""))


mat = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

a = 1
b = 0
aux = 111
vet = zeros(7, dtype=int)

for i in range(7):
	vet[i]=aux
	aux+=111
for i in range(7):
	if(n==vet[i]):
		a=i
	if (n1==vet[i]):
		b=i
print(mat[a,b])

		
-- EXECUTION TIME:
1.05539
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
